Fix Q vertical alignment

--- a/src/app/components/year-grid/year-grid.component.scss
+++ b/src/app/components/year-grid/year-grid.component.scss
@@ -56,6 +56,14 @@
           border: 1px solid #333;
           color: #fff;
           text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+          position: relative;
+
+          span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
 
           &:not(.hidden):hover {
             cursor: pointer;
